@@ -17,6 +17,9 @@
 				<f:be.menus.actionMenuItem label="Bibliotheken" controller="Backend" action="listBibliotheken" />
 			</f:be.menus.actionMenu>
 		</div>
+
+		<f:renderFlashMessages style="padding: 12px; border:1px solid #ffcc00; background-color: lightyellow" />
+
 		<f:render section="backend" />
 	</div>
 </f:be.container>
