@@ -1,0 +1,7 @@
+<f:layout name="backendLayout" />
+<f:section name="backend">
+
+
+	Bibliothek geloescht
+
+</f:section>
