@@ -16,7 +16,7 @@
 		<f:for each="{bibliotheken}" as="bibliothek">
 			<tr>
 				<td style="border:0"><f:be.buttons.icon uri="alt_doc.php?returnUrl=mod.php%3F%26M%3Dweb_StandorteTxStandorteM1%26id%3D{f:cObject(typoscriptObjectPath:'lib.tx_standorte.storagePid')}&edit[tx_standorte_domain_model_bibliothek][{bibliothek.uid}]=edit&tx_standorte_web_standortetxstandortem1[action]=listbibliotheken&tx_standorte_web_standortetxstandortem1[controller]=Backend" icon="edit2" title="{bibliothek.titel} bearbeiten" />
-			<f:be.buttons.icon uri="{f:uri.action(action:'deleteBibliothek')}" icon="deletedok" title="{bibliothek.titel} l&ouml;schen" /></td>
+			<f:be.buttons.icon uri="{f:uri.action(action:'deleteBibliothek'),arguments:'{bibliothek:bibliothek}')}" icon="deletedok" title="{bibliothek.titel} löschen" /></td>
 			<td>{bibliothek.sigel}</td>
 			<td> {bibliothek.titel}</td>
 			</tr>
