@@ -1,6 +1,7 @@
 2011-02-10 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Pi2 erstellt und konfiguriert (Bibliotheken und Sigelauflistung) WWW-525
 	* Singleansicht in Pi2 integriert (Klick auf Bibliothek) WWW-531
+	* Loeschen von Bibliotheken moeglich (Flag deleted=1 in DB) WWW-517
 
 2011-02-09 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Codeoptimierung
